# skyfall

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  models.py  pyproject.toml
docs/superpowers/plans/: 2026-04-01-productionize-skyfall.md  2026-04-02-predictor-integration.md  2026-04-03-telegram-geoparsing.md
docs/superpowers/specs/: 2026-04-01-productionize-skyfall-design.md  2026-04-02-boost-phase-design.md  (+6 more)
infra/: template.yaml
ingestion/: __init__.py  adsb_detector.py  adsb_poller.py  emergency_webhook.py  firms_poller.py  satcat_lookup.py  siren_listener.py  social_listener.py  spacetrack_poller.py
output/: __init__.py  alerter.py  formatter.py
processing/: __init__.py  burst_detector.py  correlation_engine.py  geohash.py  geoparser.py  llm_parser.py  object_tracker.py
scripts/: inject_mock_trajectory.py  opensky_push.py  oref_push.py
tests/: conftest.py
tests/e2e/: test_pipeline.py
tests/integration/: test_adsb_endpoint.py  test_alerter.py  test_correlation_engine.py  test_emergency_webhook.py  test_geoparser.py  test_llm_parser.py  test_object_tracker.py  test_trajectory_trigger.py
tests/unit/: test_adsb_detector.py  test_burst_detector.py  test_formatter.py  test_geohash.py  test_geoparser.py  test_map_generator.py  test_map_offload.py  test_models.py  test_physics.py  test_predictor.py  test_satcat_lookup.py  test_siren_listener.py  test_siren_resilience.py  test_siren_trajectory_correlation.py
trajectory/: __init__.py  demo.py  models.py  physics.py  predictor.py
visuals/: map_generator.py
